--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: npm install
-      run: nom install
+      run: npm install
     - name: jest
       run: npm test
